; ModuleID = '/home/carl/AnghaBench/git/extr_pack-bitmap.c_bitmap_position_packfile.c'
source_filename = "/home/carl/AnghaBench/git/extr_pack-bitmap.c_bitmap_position_packfile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bitmap_index = type { i32 }
%struct.object_id = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bitmap_index*, %struct.object_id*)* @bitmap_position_packfile to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bitmap_position_packfile(%struct.bitmap_index* %0, %struct.object_id* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.bitmap_index*, align 8
  %5 = alloca %struct.object_id*, align 8
  %6 = alloca i32, align 4
  store %struct.bitmap_index* %0, %struct.bitmap_index** %4, align 8
  store %struct.object_id* %1, %struct.object_id** %5, align 8
  %7 = load %struct.object_id*, %struct.object_id** %5, align 8
  %8 = getelementptr inbounds %struct.object_id, %struct.object_id* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.bitmap_index*, %struct.bitmap_index** %4, align 8
  %11 = getelementptr inbounds %struct.bitmap_index, %struct.bitmap_index* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @find_pack_entry_one(i32 %9, i32 %12)
  store i32 %13, i32* %6, align 4
  %14 = load i32, i32* %6, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %17, label %16

16:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %23

17:                                               ; preds = %2
  %18 = load %struct.bitmap_index*, %struct.bitmap_index** %4, align 8
  %19 = getelementptr inbounds %struct.bitmap_index, %struct.bitmap_index* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* %6, align 4
  %22 = call i32 @find_revindex_position(i32 %20, i32 %21)
  store i32 %22, i32* %3, align 4
  br label %23

23:                                               ; preds = %17, %16
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local i32 @find_pack_entry_one(i32, i32) #1

declare dso_local i32 @find_revindex_position(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
